--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.12.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
