--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "^3.9.1",
     "gulp-changed": "^2.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
