--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-html-beautify": "^1.0.1",
